ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-metalbear-dev-ingress
  annotations:
    networking.gke.io/managed-certificates: playground-metalbear-dev-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /count
        pathType: Prefix
        backend:
          service:
            name: ip-visit-counter
            port: 
              number: 80
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: ip-visit-counter
            port: 
              number: 80
